@@ -1,5 +1,5 @@
 plugin_LTLIBRARIES = libgstchromium.la libgstburn.la libgstdodge.la \
-   libgstexclusion.la libgstsolarize.la
+   libgstexclusion.la libgstsolarize.la libgstdilate.la
 
 # sources used to compile Chromium
 libgstchromium_la_SOURCES = gstchromium.c gstchromium.h
@@ -11,7 +11,7 @@ libgstchromium_la_LIBTOOLFLAGS = --tag=disable-static
 
 # sources used to compile this Burn
 libgstburn_la_SOURCES = gstburn.c gstburn.h
-# compiler and linker flags used to Burn, set in configure.ac
+# compiler and linker flags used to compile Burn, set in configure.ac
 libgstburn_la_CFLAGS = $(GST_CFLAGS)
 libgstburn_la_LIBADD = $(GST_LIBS)
 libgstburn_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
@@ -27,7 +27,7 @@ libgstdodge_la_LIBTOOLFLAGS = --tag=disable-static
 
 # sources used to compile Exclusion
 libgstexclusion_la_SOURCES = gstexclusion.c gstexclusion.h
-# compiler and linker flags used to compile Dodge, set in configure.ac
+# compiler and linker flags used to compile Exclusion, set in configure.ac
 libgstexclusion_la_CFLAGS = $(GST_CFLAGS)
 libgstexclusion_la_LIBADD = $(GST_LIBS)
 libgstexclusion_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
@@ -35,12 +35,19 @@ libgstexclusion_la_LIBTOOLFLAGS = --tag=disable-static
 
 # sources used to compile Solarize
 libgstsolarize_la_SOURCES = gstsolarize.c gstsolarize.h
-# compiler and linker flags used to compile Dodge, set in configure.ac
+# compiler and linker flags used to compile Solarize, set in configure.ac
 libgstsolarize_la_CFLAGS = $(GST_CFLAGS)
 libgstsolarize_la_LIBADD = $(GST_LIBS)
 libgstsolarize_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstsolarize_la_LIBTOOLFLAGS = --tag=disable-static
 
+# sources used to compile Dilate
+libgstdilate_la_SOURCES = gstdilate.c gstdilate.h
+# compiler and linker flags used to compile Dilate, set in configure.ac
+libgstdilate_la_CFLAGS = $(GST_CFLAGS)
+libgstdilate_la_LIBADD = $(GST_LIBS)
+libgstdilate_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstdilate_la_LIBTOOLFLAGS = --tag=disable-static
 
 # headers we need but don't want installed
 noinst_HEADERS = gstplugin.h
